--- a/src/renderer/src/components/tiptap-templates/simple/simple-editor.scss
+++ b/src/renderer/src/components/tiptap-templates/simple/simple-editor.scss
@@ -54,11 +54,11 @@ body,
   font-family: "DM Sans", sans-serif;
 }
 
-.simple-editor-wrapper {
-  width: 100vw;
-  height: 100vh;
-  overflow: auto;
-}
+// .simple-editor-wrapper {
+//   width: 100vw;
+//   height: 100vh;
+//   overflow: auto;
+// }
 
 .simple-editor-content {
   max-width: 648px;
